Basic functionality for all data endpoints
