# swagger_server/controllers/data_controller.py
@@ -5,10 +5,10 @@ from swagger_server.models.data import Data  # noqa: E501
 from swagger_server.models.data_row import DataRow  # noqa: E501
 from swagger_server.models.data_schema import DataSchema  # noqa: E501
 from swagger_server import util
-from swagger_server.utils.database import client as db
+from swagger_server.utils.database import client
 
 
-def delete_data(id):  # noqa: E501
+def delete_data(name):  # noqa: E501
     """Delete data of scheme type
 
      # noqa: E501
@@ -18,10 +18,20 @@ def delete_data(id):  # noqa: E501
 
     :rtype: int
     """
-    return 'do some magic!'
+
+    try:
+        data = client["simulation_data"][name]
+        amount = data.count()
+        if amount > 0:
+            data.drop()
+            return "{'Rows Affected':" + str(amount) + "}", 200
+        else:
+            return "Schema does not exist", 400
+    except:
+        return 'Failed', 400
 
 
-def get_data(id, amount=None, filters=None):  # noqa: E501
+def get_data(name, amount=None, filters=None):  # noqa: E501
     """Get data of scheme type
 
      # noqa: E501
@@ -35,7 +45,20 @@ def get_data(id, amount=None, filters=None):  # noqa: E501
 
     :rtype: List[DataRow]
     """
-    return 'do some magic!'
+
+    try:
+        data = client["simulation_data"][name]
+        maxx = data.count()
+        if maxx  > 0:
+            if(amount is None):
+                amount = maxx
+            if filters is None:
+                filters = {}
+            return([DataRow.from_dict(dict(i)) for i in data.find(filters).limit(amount)])
+        else:
+            return "Schema or data does not exist", 400
+    except:
+        return 'Failed', 400
 
 
 def get_data_schemes():  # noqa: E501
@@ -46,10 +69,11 @@ def get_data_schemes():  # noqa: E501
 
     :rtype: List[DataSchema]
     """
-    return 'do some magic!'
+    schema = client["simulation_data"]["schema"].find({})
+    return schema
 
 
-def post_add_data(body, id):  # noqa: E501
+def post_add_data(body, name):  # noqa: E501
     """Add data of scheme type
 
      # noqa: E501
@@ -63,7 +87,14 @@ def post_add_data(body, id):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Data.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+
+    db = client["simulation_data"]
+    if db["schema"].find_one({"name": name}) is not None:
+        coll = db[name]
+        coll.insert_many([i.to_dict() for i in body.data])
+    else:
+        return 'Schema for this data does not exist', 400
+    return 'Data Added', 200
 
 
 def put_add_scheme(body):  # noqa: E501
@@ -80,11 +111,11 @@ def put_add_scheme(body):  # noqa: E501
     if connexion.request.is_json:
         body = DataSchema.from_dict(connexion.request.get_json())  # noqa: E501
 
-    database = db["simulation_data"]
-    if not body.id in database.list_collection_names():
-        newcol = database[body.id]
+    database = client["simulation_data"]
+    if database["schema"].find_one({"name": body.name}) is None:
+        newcol = database[body.name]
         schema = database["schema"]
         schema.insert_one(body.to_dict())
     else:
-        return 'Schema Exists', 400
-    return 'Worked'
+        return 'Schema NAME Exists', 400
+    return 'Schema Added', 200
