# swagger_server/models/__init__.py
@@ -4,7 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.data import Data
-from swagger_server.models.data_data import DataData
 from swagger_server.models.data_row import DataRow
 from swagger_server.models.data_row_fields import DataRowFields
 from swagger_server.models.data_schema import DataSchema
